<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">触信图像识别</string>
    <string name="hello_world">未查询</string>
    <string name="action_settings">Settings</string>
	<string name="select_image">选择图片</string>
    <string name="start_preview">打开摄像头</string>
    <string name="chuxin_shitu">触信识图</string>
    <string name="open_camera_preview">相机拍照</string>
    <string name="query_preview_picture">查询相机图片</string>
    <string name="stop_camera_preview">停止预览</string>
</resources>
