<?xml version="1.0" encoding="utf-8"?>  
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"  
    android:layout_width="fill_parent"  
    android:layout_height="wrap_content"  
    >  
    <TextView 
	android:id="@+id/textView" 
	android:layout_width="fill_parent"  
	android:layout_height="wrap_content"  
	android:text="@string/hello_world"/> 
    <Button    
    android:layout_width="fill_parent"   
    android:layout_height="wrap_content"   
    android:text="@string/select_image"  
    android:id="@+id/selectImage"  
    />  
    <Button    
    android:layout_width="fill_parent"   
    android:layout_height="wrap_content"   
    android:text="@string/chuxin_shitu"
    android:id="@+id/uploadImage"  
    />  
    <ImageView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/imageView"
    />
    <Button
        android:id="@+id/startcamerapreview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_preview" />
    <Button
        android:id="@+id/query_preview_picture"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/query_preview_picture" />
    <Button
        android:id="@+id/stopcamerapreview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_camera_preview" />

    <SurfaceView
        android:id="@+id/surfaceview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
</LinearLayout>  